include/El/lapack_like/factor.h

/* QR factorization
   ================ */

typedef struct 
{
    bool colPiv;

    bool boundRank;
    ElInt maxRank;
    
    bool adaptive;
    float tol;

    bool alwaysRecomputeNorms;    

    /* TODO: Add Chan ratio */

    bool smallestFirst;
} ElQRCtrl_s;
typedef struct 
{
    bool colPiv;

    bool boundRank;
    ElInt maxRank;
    
    bool adaptive;
    double tol;

    bool alwaysRecomputeNorms;    

    /* TODO: Add Chan ratio */
    bool smallestFirst;
} ElQRCtrl_d;
/* Return the packed QR factorization (with no pivoting)
   ----------------------------------------------------- */
EL_EXPORT ElError ElQR_s( ElMatrix_s A, ElMatrix_s t, ElMatrix_s d );
EL_EXPORT ElError ElQR_d( ElMatrix_d A, ElMatrix_d t, ElMatrix_d d );
EL_EXPORT ElError ElQR_c( ElMatrix_c A, ElMatrix_c t, ElMatrix_s d );
EL_EXPORT ElError ElQR_z( ElMatrix_z A, ElMatrix_z t, ElMatrix_d d );
EL_EXPORT ElError ElQRDist_s
( ElDistMatrix_s A, ElDistMatrix_s t, ElDistMatrix_s d );
EL_EXPORT ElError ElQRDist_d
( ElDistMatrix_d A, ElDistMatrix_d t, ElDistMatrix_d d );
EL_EXPORT ElError ElQRDist_c
( ElDistMatrix_c A, ElDistMatrix_c t, ElDistMatrix_s d );
EL_EXPORT ElError ElQRDist_z
( ElDistMatrix_z A, ElDistMatrix_z t, ElDistMatrix_d d );
EL_EXPORT ElError ElQRColPivDist_s
( ElDistMatrix_s A, ElDistMatrix_s t, ElDistMatrix_s d,
  ElDistPermutation Omega );
EL_EXPORT ElError ElQRColPivDist_d
( ElDistMatrix_d A, ElDistMatrix_d t, ElDistMatrix_d d,
  ElDistPermutation Omega );
EL_EXPORT ElError ElQRColPivDist_c
( ElDistMatrix_c A, ElDistMatrix_c t, ElDistMatrix_s d,
  ElDistPermutation Omega );
EL_EXPORT ElError ElQRColPivDist_z
( ElDistMatrix_z A, ElDistMatrix_z t, ElDistMatrix_d d,
  ElDistPermutation Omega );
/* Expert version
   ^^^^^^^^^^^^^^ */
EL_EXPORT ElError ElQRColPivX_s
( ElMatrix_s A, ElMatrix_s t, ElMatrix_s d, ElPermutation Omega,
  ElQRCtrl_s ctrl );
EL_EXPORT ElError ElQRColPivX_d
( ElMatrix_d A, ElMatrix_d t, ElMatrix_d d, ElPermutation Omega,
  ElQRCtrl_d ctrl );
EL_EXPORT ElError ElQRColPivX_c
( ElMatrix_c A, ElMatrix_c t, ElMatrix_s d, ElPermutation Omega,
  ElQRCtrl_s ctrl );
EL_EXPORT ElError ElQRColPivX_z
( ElMatrix_z A, ElMatrix_z t, ElMatrix_d d, ElPermutation Omega,
  ElQRCtrl_d ctrl );
EL_EXPORT ElError ElQRColPivXDist_s
( ElDistMatrix_s A, ElDistMatrix_s t, ElDistMatrix_s d, ElDistPermutation Omega,
  ElQRCtrl_s ctrl );
EL_EXPORT ElError ElQRColPivXDist_d
( ElDistMatrix_d A, ElDistMatrix_d t, ElDistMatrix_d d, ElDistPermutation Omega,
  ElQRCtrl_d ctrl );
EL_EXPORT ElError ElQRColPivXDist_c
( ElDistMatrix_c A, ElDistMatrix_c t, ElDistMatrix_s d, ElDistPermutation Omega,
  ElQRCtrl_s ctrl );
EL_EXPORT ElError ElQRColPivXDist_z
( ElDistMatrix_z A, ElDistMatrix_z t, ElDistMatrix_d d, ElDistPermutation Omega,
  ElQRCtrl_d ctrl );
/* Return the triangular factor from QR with no pivoting
   ----------------------------------------------------- */
EL_EXPORT ElError ElQRExplicitTriang_s( ElMatrix_s A );
EL_EXPORT ElError ElQRExplicitTriang_d( ElMatrix_d A );
EL_EXPORT ElError ElQRExplicitTriang_c( ElMatrix_c A );
EL_EXPORT ElError ElQRExplicitTriang_z( ElMatrix_z A );
EL_EXPORT ElError ElQRExplicitTriangDist_s( ElDistMatrix_s A );
EL_EXPORT ElError ElQRExplicitTriangDist_d( ElDistMatrix_d A );
EL_EXPORT ElError ElQRExplicitTriangDist_c( ElDistMatrix_c A );
EL_EXPORT ElError ElQRExplicitTriangDist_z( ElDistMatrix_z A );
/* Return the unitary factor from QR 
   --------------------------------- */
EL_EXPORT ElError ElQRExplicitUnitary_s( ElMatrix_s A );
EL_EXPORT ElError ElQRExplicitUnitary_d( ElMatrix_d A );
EL_EXPORT ElError ElQRExplicitUnitary_c( ElMatrix_c A );
EL_EXPORT ElError ElQRExplicitUnitary_z( ElMatrix_z A );
EL_EXPORT ElError ElQRExplicitUnitaryDist_s( ElDistMatrix_s A );
EL_EXPORT ElError ElQRExplicitUnitaryDist_d( ElDistMatrix_d A );
EL_EXPORT ElError ElQRExplicitUnitaryDist_c( ElDistMatrix_c A );
EL_EXPORT ElError ElQRExplicitUnitaryDist_z( ElDistMatrix_z A );
/* Expert version
   ^^^^^^^^^^^^^^ */
/* TODO */

/* Return the explicit Q and R 
   --------------------------- */
EL_EXPORT ElError ElQRExplicit_s( ElMatrix_s A, ElMatrix_s R );
EL_EXPORT ElError ElQRExplicit_d( ElMatrix_d A, ElMatrix_d R );
EL_EXPORT ElError ElQRExplicit_c( ElMatrix_c A, ElMatrix_c R );
EL_EXPORT ElError ElQRExplicit_z( ElMatrix_z A, ElMatrix_z R );
EL_EXPORT ElError ElQRExplicitDist_s( ElDistMatrix_s A, ElDistMatrix_s R );
EL_EXPORT ElError ElQRExplicitDist_d( ElDistMatrix_d A, ElDistMatrix_d R );
EL_EXPORT ElError ElQRExplicitDist_c( ElDistMatrix_c A, ElDistMatrix_c R );
EL_EXPORT ElError ElQRExplicitDist_z( ElDistMatrix_z A, ElDistMatrix_z R );
/* Expert version
   ^^^^^^^^^^^^^^ */
/* TODO */

/* Return the explicit Q, R, and Omega
   ----------------------------------- */
EL_EXPORT ElError ElQRColPivExplicit_s
( ElMatrix_s A, ElMatrix_s R, ElMatrix_i Omega );
EL_EXPORT ElError ElQRColPivExplicit_d
( ElMatrix_d A, ElMatrix_d R, ElMatrix_i Omega );
EL_EXPORT ElError ElQRColPivExplicit_c
( ElMatrix_c A, ElMatrix_c R, ElMatrix_i Omega );
EL_EXPORT ElError ElQRColPivExplicit_z
( ElMatrix_z A, ElMatrix_z R, ElMatrix_i Omega );
EL_EXPORT ElError ElQRColPivExplicitDist_s
( ElDistMatrix_s A, ElDistMatrix_s R, ElDistMatrix_i Omega );
EL_EXPORT ElError ElQRColPivExplicitDist_d
( ElDistMatrix_d A, ElDistMatrix_d R, ElDistMatrix_i Omega );
EL_EXPORT ElError ElQRColPivExplicitDist_c
( ElDistMatrix_c A, ElDistMatrix_c R, ElDistMatrix_i Omega );
EL_EXPORT ElError ElQRColPivExplicitDist_z
( ElDistMatrix_z A, ElDistMatrix_z R, ElDistMatrix_i Omega );
/* Expert version
   ^^^^^^^^^^^^^^ */
/* TODO */

/* Perform a Cholesky-based QR factorization
   ----------------------------------------- */
EL_EXPORT ElError ElCholeskyQR_s( ElMatrix_s A, ElMatrix_s R );
EL_EXPORT ElError ElCholeskyQR_d( ElMatrix_d A, ElMatrix_d R );
EL_EXPORT ElError ElCholeskyQR_c( ElMatrix_c A, ElMatrix_c R );
EL_EXPORT ElError ElCholeskyQR_z( ElMatrix_z A, ElMatrix_z R );
EL_EXPORT ElError ElCholeskyQRDist_s( ElDistMatrix_s A, ElDistMatrix_s R );
EL_EXPORT ElError ElCholeskyQRDist_d( ElDistMatrix_d A, ElDistMatrix_d R );
EL_EXPORT ElError ElCholeskyQRDist_c( ElDistMatrix_c A, ElDistMatrix_c R );
EL_EXPORT ElError ElCholeskyQRDist_z( ElDistMatrix_z A, ElDistMatrix_z R );
/* Apply Q from a QR factorization to vectors
   ------------------------------------------ */
EL_EXPORT ElError ElApplyQAfterQR_s
( ElLeftOrRight side, ElOrientation orientation, 
  ElConstMatrix_s A, ElConstMatrix_s t, 
  ElConstMatrix_s d, ElMatrix_s B );
EL_EXPORT ElError ElApplyQAfterQR_d
( ElLeftOrRight side, ElOrientation orientation, 
  ElConstMatrix_d A, ElConstMatrix_d t, 
  ElConstMatrix_d d, ElMatrix_d B );
EL_EXPORT ElError ElApplyQAfterQR_c
( ElLeftOrRight side, ElOrientation orientation, 
  ElConstMatrix_c A, ElConstMatrix_c t, 
  ElConstMatrix_s d, ElMatrix_c B );
EL_EXPORT ElError ElApplyQAfterQR_z
( ElLeftOrRight side, ElOrientation orientation, 
  ElConstMatrix_z A, ElConstMatrix_z t, 
  ElConstMatrix_d d, ElMatrix_z B );
EL_EXPORT ElError ElApplyQAfterQRDist_s
( ElLeftOrRight side, ElOrientation orientation, 
  ElConstDistMatrix_s A, ElConstDistMatrix_s t, 
  ElConstDistMatrix_s d, ElDistMatrix_s B );
EL_EXPORT ElError ElApplyQAfterQRDist_d
( ElLeftOrRight side, ElOrientation orientation, 
  ElConstDistMatrix_d A, ElConstDistMatrix_d t, 
  ElConstDistMatrix_d d, ElDistMatrix_d B );
EL_EXPORT ElError ElApplyQAfterQRDist_c
( ElLeftOrRight side, ElOrientation orientation, 
  ElConstDistMatrix_c A, ElConstDistMatrix_c t, 
  ElConstDistMatrix_s d, ElDistMatrix_c B );
EL_EXPORT ElError ElApplyQAfterQRDist_z
( ElLeftOrRight side, ElOrientation orientation, 
  ElConstDistMatrix_z A, ElConstDistMatrix_z t, 
  ElConstDistMatrix_d d, ElDistMatrix_z B );
/* TODO: TSQR */
/* TODO: ExplicitTSQR */

/* RQ factorization
   ================ */

/* Return the packed RQ factorization 
   ---------------------------------- */
EL_EXPORT ElError ElRQ_s( ElMatrix_s A, ElMatrix_s t, ElMatrix_s d );
EL_EXPORT ElError ElRQ_d( ElMatrix_d A, ElMatrix_d t, ElMatrix_d d );
EL_EXPORT ElError ElRQ_c( ElMatrix_c A, ElMatrix_c t, ElMatrix_s d );
EL_EXPORT ElError ElRQ_z( ElMatrix_z A, ElMatrix_z t, ElMatrix_d d );
EL_EXPORT ElError ElRQDist_s
( ElDistMatrix_s A, ElDistMatrix_s t, ElDistMatrix_s d );
EL_EXPORT ElError ElRQDist_d
( ElDistMatrix_d A, ElDistMatrix_d t, ElDistMatrix_d d );
EL_EXPORT ElError ElRQDist_c
( ElDistMatrix_c A, ElDistMatrix_c t, ElDistMatrix_s d );
EL_EXPORT ElError ElRQDist_z
( ElDistMatrix_z A, ElDistMatrix_z t, ElDistMatrix_d d );
/* TODO: Return the explicit RQ factorization 
   ------------------------------------------ */

/* Only return the triangular factor, L
   ------------------------------------ */
EL_EXPORT ElError ElRQExplicitTriang_s( ElMatrix_s A );
EL_EXPORT ElError ElRQExplicitTriang_d( ElMatrix_d A );
EL_EXPORT ElError ElRQExplicitTriang_c( ElMatrix_c A );
EL_EXPORT ElError ElRQExplicitTriang_z( ElMatrix_z A );
EL_EXPORT ElError ElRQExplicitTriangDist_s( ElDistMatrix_s A );
EL_EXPORT ElError ElRQExplicitTriangDist_d( ElDistMatrix_d A );
EL_EXPORT ElError ElRQExplicitTriangDist_c( ElDistMatrix_c A );
EL_EXPORT ElError ElRQExplicitTriangDist_z( ElDistMatrix_z A );