python/lapack_like/factor.py


lib.ElQRColPivX_s.argtypes = \
lib.ElQRColPivX_c.argtypes = \
lib.ElQRColPivXDist_s.argtypes = \
lib.ElQRColPivXDist_c.argtypes = \
  [c_void_p,c_void_p,c_void_p,c_void_p,QRCtrl_s]

lib.ElQRColPivX_d.argtypes = \
lib.ElQRColPivX_z.argtypes = \
lib.ElQRColPivXDist_d.argtypes = \
lib.ElQRColPivXDist_z.argtypes = \
  [c_void_p,c_void_p,c_void_p,c_void_p,QRCtrl_d]

lib.ElQRColPivExplicit_s.argtypes = \
lib.ElQRColPivExplicit_d.argtypes = \
lib.ElQRColPivExplicit_c.argtypes = \
lib.ElQRColPivExplicit_z.argtypes = \
lib.ElQRColPivExplicitDist_s.argtypes = \
lib.ElQRColPivExplicitDist_d.argtypes = \
lib.ElQRColPivExplicitDist_c.argtypes = \
lib.ElQRColPivExplicitDist_z.argtypes = \
  [c_void_p,c_void_p,c_void_p]

def QR(A,piv=False,factType=QR_IMPLICIT,ctrl=None):
  if type(A) is Matrix:
    if piv:
      if factType == QR_IMPLICIT:  
        t = Matrix(A.tag)
        d = Matrix(Base(A.tag))
        Omega = Permutation()
        args = [A.obj,t.obj,d.obj,Omega.obj]
        argsCtrl = [A.obj,t.obj,d.obj,Omega.obj,ctrl]
        if   A.tag == sTag:
          if ctrl == None: lib.ElQRColPivDist_s(*args)
          else:            lib.ElQRColPivXDist_s(*argsCtrl)
        elif A.tag == dTag:
          if ctrl == None: lib.ElQRColPivDist_d(*args)
          else:            lib.ElQRColPivXDist_d(*argsCtrl)
        elif A.tag == cTag:
          if ctrl == None: lib.ElQRColPivDist_c(*args)
          else:            lib.ElQRColPivXDist_c(*argsCtrl)
        elif A.tag == zTag:
          if ctrl == None: lib.ElQRColPivDist_z(*args)
          else:            lib.ElQRColPivXDist_z(*argsCtrl)
        else: DataExcept()
        return t, d, Omega
      elif factType == QR_EXPLICIT:
        if ctrl != None: 
          raise Exception('\'ctrl\' not yet supported for explicit piv fact\'s')
        R = Matrix(A.tag)
        Omega = Matrix(iTag)
        args = [A.obj,R.obj,Omega.obj]
        if   A.tag == sTag: lib.ElQRColPivExplicit_s(*args)
        elif A.tag == dTag: lib.ElQRColPivExplicit_d(*args)
        elif A.tag == cTag: lib.ElQRColPivExplicit_c(*args)
        elif A.tag == zTag: lib.ElQRColPivExplicit_z(*args)
        else: DataExcept()
        return R, Omega
      else: 
        raise Exception('Partial pivoted explicit fact\'s not yet supported')
    else:
      if factType == QR_IMPLICIT:
        t = Matrix(A.tag)
        d = Matrix(Base(A.tag))
        args = [A.obj,t.obj,d.obj]
        if   A.tag == sTag: lib.ElQR_s(*args)
        elif A.tag == dTag: lib.ElQR_d(*args)
        elif A.tag == cTag: lib.ElQR_c(*args)
        elif A.tag == zTag: lib.ElQR_z(*args)
        else: DataExcept()
        return t, d
      elif factType == QR_EXPLICIT:
        R = Matrix(A.tag)
        args = [A.obj,R.obj]
        if   A.tag == sTag: lib.ElQRExplicit_s(*args)
        elif A.tag == dTag: lib.ElQRExplicit_d(*args)
        elif A.tag == cTag: lib.ElQRExplicit_c(*args)
        elif A.tag == zTag: lib.ElQRExplicit_z(*args)
        else: DataExcept()
        return R
      elif factType == QR_EXPLICIT_TRIANG:
        args = [A.obj]
        if   A.tag == sTag: lib.ElQRExplicitTriang_s(*args)
        elif A.tag == dTag: lib.ElQRExplicitTriang_d(*args)
        elif A.tag == cTag: lib.ElQRExplicitTriang_c(*args)
        elif A.tag == zTag: lib.ElQRExplicitTriang_z(*args)
        else: DataExcept()
      elif factType == QR_EXPLICIT_UNITARY:
        args = [A.obj]
        if   A.tag == sTag: lib.ElQRExplicitUnitary_s(*args)
        elif A.tag == dTag: lib.ElQRExplicitUnitary_d(*args)
        elif A.tag == cTag: lib.ElQRExplicitUnitary_c(*args)
        elif A.tag == zTag: lib.ElQRExplicitUnitary_z(*args)
        else: DataExcept()
      else: raise Exception('Unsupported QR factorization type')
  elif type(A) is DistMatrix:
    if piv:
      if factType == QR_IMPLICIT:  
        t = DistMatrix(A.tag,MC,STAR,A.Grid())
        d = DistMatrix(Base(A.tag),MC,STAR,A.Grid())
        Omega = DistPermutation(A.Grid())
        args = [A.obj,t.obj,d.obj,Omega.obj]
        argsCtrl = [A.obj,t.obj,d.obj,Omega.obj,ctrl]
        if   A.tag == sTag:
          if ctrl == None: lib.ElQRColPivDist_s(*args)
          else:            lib.ElQRColPivXDist_s(*argsCtrl)
        elif A.tag == dTag:
          if ctrl == None: lib.ElQRColPivDist_d(*args)
          else:            lib.ElQRColPivXDist_d(*argsCtrl)
        elif A.tag == cTag:
          if ctrl == None: lib.ElQRColPivDist_c(*args)
          else:            lib.ElQRColPivXDist_c(*argsCtrl)
        elif A.tag == zTag:
          if ctrl == None: lib.ElQRColPivDist_z(*args)
          else:            lib.ElQRColPivXDist_z(*argsCtrl)
        else: DataExcept()
        return t, d, Omega
      elif factType == QR_EXPLICIT:
        if ctrl != None: 
          raise Exception('\'ctrl\' not yet supported for explicit piv fact\'s')
        R = DistMatrix(A.tag,MC,MR,A.Grid())
        Omega = DistMatrix(iTag,MC,MR,A.Grid())
        args = [A.obj,R.obj,Omega.obj]
        if   A.tag == sTag: lib.ElQRColPivExplicitDist_s(*args)
        elif A.tag == dTag: lib.ElQRColPivExplicitDist_d(*args)
        elif A.tag == cTag: lib.ElQRColPivExplicitDist_c(*args)
        elif A.tag == zTag: lib.ElQRColPivExplicitDist_z(*args)
        else: DataExcept()
        return R, Omega
      else: 
        raise Exception('Partial pivoted explicit fact\'s not yet supported')
    else:
      if factType == QR_IMPLICIT:
        t = DistMatrix(A.tag,MC,STAR,A.Grid())
        d = DistMatrix(Base(A.tag),MC,STAR,A.Grid())
        args = [A.obj,t.obj,d.obj]
        if   A.tag == sTag: lib.ElQRDist_s(*args)
        elif A.tag == dTag: lib.ElQRDist_d(*args)
        elif A.tag == cTag: lib.ElQRDist_c(*args)
        elif A.tag == zTag: lib.ElQRDist_z(*args)
        else: DataExcept()
        return t, d
      elif factType == QR_EXPLICIT:
        R = Matrix(A.tag)
        args = [A.obj,R.obj]
        if   A.tag == sTag: lib.ElQRExplicitDist_s(*args)
        elif A.tag == dTag: lib.ElQRExplicitDist_d(*args)
        elif A.tag == cTag: lib.ElQRExplicitDist_c(*args)
        elif A.tag == zTag: lib.ElQRExplicitDist_z(*args)
        else: DataExcept()
        return R
      elif factType == QR_EXPLICIT_TRIANG:
        args = [A.obj]
        if   A.tag == sTag: lib.ElQRExplicitTriangDist_s(*args)
        elif A.tag == dTag: lib.ElQRExplicitTriangDist_d(*args)
        elif A.tag == cTag: lib.ElQRExplicitTriangDist_c(*args)
        elif A.tag == zTag: lib.ElQRExplicitTriangDist_z(*args)
        else: DataExcept()
      elif factType == QR_EXPLICIT_UNITARY:
        args = [A.obj]
        if   A.tag == sTag: lib.ElQRExplicitUnitaryDist_s(*args)
        elif A.tag == dTag: lib.ElQRExplicitUnitaryDist_d(*args)
        elif A.tag == cTag: lib.ElQRExplicitUnitaryDist_c(*args)
        elif A.tag == zTag: lib.ElQRExplicitUnitaryDist_z(*args)
        else: DataExcept()
      else: raise Exception('Unsupported QR factorization type')
  else: TypeExcept()

lib.ElCholeskyQR_s.argtypes = \
lib.ElCholeskyQR_d.argtypes = \
lib.ElCholeskyQR_c.argtypes = \
lib.ElCholeskyQR_z.argtypes = \
lib.ElCholeskyQRDist_s.argtypes = \
lib.ElCholeskyQRDist_d.argtypes = \
lib.ElCholeskyQRDist_c.argtypes = \
lib.ElCholeskyQRDist_z.argtypes = \
  [c_void_p,c_void_p]

def CholeskyQR(A):
  if type(A) is Matrix:
    R = Matrix(A.tag)
    args = [A.obj,R.obj]
    if   A.tag == sTag: lib.ElCholeskyQR_s(*args)
    elif A.tag == dTag: lib.ElCholeskyQR_d(*args)
    elif A.tag == cTag: lib.ElCholeskyQR_c(*args)
    elif A.tag == zTag: lib.ElCholeskyQR_z(*args)
    else: DataExcept()
    return R
  elif type(A) is DistMatrix:
    R = DistMatrix(A.tag,STAR,STAR,A.Grid())
    args = [A.obj,R.obj]
    if   A.tag == sTag: lib.ElCholeskyQRDist_s(*args)
    elif A.tag == dTag: lib.ElCholeskyQRDist_d(*args)
    elif A.tag == cTag: lib.ElCholeskyQRDist_c(*args)
    elif A.tag == zTag: lib.ElCholeskyQRDist_z(*args)
    else: DataExcept()
    return R
  else: TypeExcept()

lib.ElApplyQAfterQR_s.argtypes = \
lib.ElApplyQAfterQR_d.argtypes = \
lib.ElApplyQAfterQR_c.argtypes = \
lib.ElApplyQAfterQR_z.argtypes = \
lib.ElApplyQAfterQRDist_s.argtypes = \
lib.ElApplyQAfterQRDist_d.argtypes = \
lib.ElApplyQAfterQRDist_c.argtypes = \
lib.ElApplyQAfterQRDist_z.argtypes = \
  [c_uint,c_uint,c_void_p,c_void_p,c_void_p,c_void_p]

def ApplyQAfterQR(side,orient,A,t,d,B):
  if type(A) is not type(t) or type(t) is not type(d) or type(d) is not type(B):
    raise Exception('Matrix types of {A,t,d,B} must match')
  if A.tag != t.tag or t.tag != B.tag:
    raise Exception('Datatypes of {A,t,B} must match')
  if d.tag != Base(A.tag):
    raise Exception('Base type of A must match that of d')
  args = [side,orient,A.obj,t.obj,d.obj,B.obj]
  if type(A) is Matrix:
    if   A.tag == sTag: lib.ElApplyQAfterQR_s(*args)
    elif A.tag == dTag: lib.ElApplyQAfterQR_d(*args)
    elif A.tag == cTag: lib.ElApplyQAfterQR_c(*args)
    elif A.tag == zTag: lib.ElApplyQAfterQR_z(*args)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if   A.tag == sTag: lib.ElApplyQAfterQRDist_s(*args)
    elif A.tag == dTag: lib.ElApplyQAfterQRDist_d(*args)
    elif A.tag == cTag: lib.ElApplyQAfterQRDist_c(*args)
    elif A.tag == zTag: lib.ElApplyQAfterQRDist_z(*args)
    else: DataExcept()
  else: TypeExcept()

# TODO: TSQR
# TODO: ExplicitTSQR

# RQ factorization
# ================
(RQ_IMPLICIT,RQ_EXPLICIT,RQ_EXPLICIT_TRIANG,RQ_EXPLICIT_UNITARY)=(0,1,2,3)

lib.ElRQ_s.argtypes = \
lib.ElRQ_d.argtypes = \
lib.ElRQ_c.argtypes = \
lib.ElRQ_z.argtypes = \
lib.ElRQDist_s.argtypes = \
lib.ElRQDist_d.argtypes = \
lib.ElRQDist_c.argtypes = \
lib.ElRQDist_z.argtypes = \
  [c_void_p,c_void_p,c_void_p]

#lib.ElRQExplicit_s.argtypes = \
#lib.ElRQExplicit_d.argtypes = \
#lib.ElRQExplicit_c.argtypes = \
#lib.ElRQExplicit_z.argtypes = \
#lib.ElRQExplicitDist_s.argtypes = \
#lib.ElRQExplicitDist_d.argtypes = \
#lib.ElRQExplicitDist_c.argtypes = \
#lib.ElRQExplicitDist_z.argtypes = \
#  [c_void_p,c_void_p]

#lib.ElRQExplicitUnitary_s.argtypes = \
#lib.ElRQExplicitUnitary_d.argtypes = \
#lib.ElRQExplicitUnitary_c.argtypes = \
#lib.ElRQExplicitUnitary_z.argtypes = \
#lib.ElRQExplicitUnitaryDist_s.argtypes = \
#lib.ElRQExplicitUnitaryDist_d.argtypes = \
#lib.ElRQExplicitUnitaryDist_c.argtypes = \
#lib.ElRQExplicitUnitaryDist_z.argtypes = \
#  [c_void_p]

lib.ElRQExplicitTriang_s.argtypes = \
lib.ElRQExplicitTriang_d.argtypes = \
lib.ElRQExplicitTriang_c.argtypes = \
lib.ElRQExplicitTriang_z.argtypes = \
lib.ElRQExplicitTriangDist_s.argtypes = \
lib.ElRQExplicitTriangDist_d.argtypes = \
lib.ElRQExplicitTriangDist_c.argtypes = \
lib.ElRQExplicitTriangDist_z.argtypes = \
  [c_void_p]
